# prophet-nnue

./: .gitignore  .gitmodules  0.0.bias  0.0.weight  1.0.bias  1.0.weight  2.0.bias  2.0.weight  3.0.bias  3.0.weight  Cargo.toml  README.md  build.sh  cbindgen.toml  conv2.npz  conv3.npz  conv4.npz  conv_model.npz  conv_model_batchnorm2d.npz  conv_model_large.npz  conv_model_medium.npz  convb.npz  dbg.txt  dense_mlp.npz  model.npz  nnue.npz  sparse_mlp.npz  train.txt
datagen/: Cargo.toml  README.md
datagen/src/: main.rs  main.rs.orig
fengine/: .gitignore  Makefile  README.md  dirichlet.hpp  main.cpp
include/: prophet.h
nnue/: Cargo.toml  build.sh  nnue.npz
nnue/include/: prophet.h
nnue/src/: lib.rs  main.rs  nn.rs  search.rs
nnue/src/nn/: clipped_relu.rs
nnue/src/search/: table.rs
src/: lib.rs  main.rs  nn.rs  search.rs
src/belief/: mlp.rs
src/nn/: clipped_relu.rs  selu.rs
src/search/: eval.rs  table.rs
