[package]
name = "prophet-nnue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prophet"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
chess = "3.2.0"
csv = "1.2.1"
dfdx = { version="0.11.1", features = ["numpy", "nightly"] }
indicatif = "0.17.3"
rand = "0.8.5"
vampirc-uci = "0.11.1"
zip = "0.6.2"
